--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3041020220516002",
     "@dcloudio/uni-ui": "^1.4.22",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^3.0.2",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.9"
   },
