--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3041020220516002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3041020220516002",
     "@dcloudio/uni-ui": "^1.4.22",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^3.0.2",
     "vue": "^3.2.33",
